@@ -12,7 +12,7 @@
 }
 
 body {
-    min-width:800px;
+    min-width:600px;
     min-height:400px;
 }
 
